<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food_order_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="10dp"
    android:stretchColumns="*"
    tools:context=".TacoOrder">


    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/label"
                android:text="@string/size_label" />

            <RadioGroup
                android:id="@+id/size_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/size_large" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/size_medium" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/label"
                android:text="@string/tortilla_label" />

            <RadioGroup
                android:id="@+id/tortilla_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/tortilla_corn" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/tortilla_flour" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_1"
        tools:layout_editor_absoluteX="205dp">

        <TextView
            style="@style/label"
            android:text="@string/fillings_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/fillings_beef" />

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/fillings_chicken" />

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/fillings_white_fish" />

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/fillings_cheese" />

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/fillings_sea_food" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/fillings_rice" />

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/fillings_beans" />

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/fillings_pico_de_gallo" />

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/fillings_guacamole" />

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/fillings_lbt" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_2"
        tools:layout_editor_absoluteX="205dp">

        <TextView
            style="@style/label"
            android:text="@string/beverage_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/beverage_soda" />

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/beverage_cerveza" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/beverage_margarita" />

                <CheckBox
                    style="@style/checkbox"
                    android:text="@string/beverage_tequila" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/place_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/place_order_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_3" />


</androidx.constraintlayout.widget.ConstraintLayout>